--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bulma": "^0.9.3",
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
